--- a/src/html/list.html
+++ b/src/html/list.html
@@ -3,8 +3,8 @@
                 <div class="header_t clearfix">
                     <div class="header_tl fl">
                         <span>Hi,欢迎来到如此生活</span>
-                        <span><a href="#">登陆</a></span>
-                        <span><a href="#">免费注册</a></span>
+                        <span><a href="login.html">登录</a></span>
+                        <span><a href="register.html">免费注册</a></span>
                         <span><a href="#"><i class="iconfont icon-gongzhonghao"></i></a></span>
                         <span><a href="#"><i  class="iconfont icon-weibo"></i></a></span>
                     </div>
